Closed Bug 993443 Opened 11 years ago Closed 11 years ago

"Assertion failure: aSize > 0" in ConstrainToCoordValues

Categories

(Core :: SVG, defect)

x86_64
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla31

People

(Reporter: jruderman, Assigned: jwatt)

References

Details

(Keywords: assertion, regression, testcase)

Attachments

(3 files, 1 obsolete file)

Attached image testcase
Assertion failure: aSize > 0, at layout/base/nsLayoutUtils.cpp:1812 This assertion is part of code added in https://hg.mozilla.org/mozilla-central/rev/fe53a01dab3d
Attached file stack
The ScaleRoundOut() call in nsLayoutUtils::RoundGfxRectToAppRect results in the width of |scaledRect| being zero because of the way ScaleRoundOut is implemented (YMost includes the huge x value so the width is insignificant and adds nothing due to double not having enough precision). ConstrainToCoordValues might as well assert MOZ_ASSERT(aSize >= 0) rather than MOZ_ASSERT(aSize > 0).
Attached patch patch (obsolete) — Splinter Review
Assignee: nobody → jwatt
Attachment #8403368 - Flags: review?(longsonr)
Attached patch patchSplinter Review
Attachment #8403368 - Attachment is obsolete: true
Attachment #8403368 - Flags: review?(longsonr)
Attachment #8403369 - Flags: review?(longsonr)
I don't think it's worth special casing the rare zero width case, FWIW.
Comment on attachment 8403369 [details] [diff] [review] patch Don't forget to check in the testcase as a crashtest.
Attachment #8403369 - Flags: review?(longsonr) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: