Bug 993443 - Relax the assertion in ConstrainToCoordValues to allow aSize to also be zero. r=longsonr